--- a/pom.xml
+++ b/pom.xml
@@ -4,17 +4,19 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>me.jdavis.idkbro</groupId>
-    <artifactId>idkbro</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>com.zapmek</groupId>
+    <artifactId>FreedomOfSpeech</artifactId>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
-    <name>Idkbro</name>
+    <name>FreedomOfSpeech</name>
 
+    <description>Report Bypass Chat Preview Bypass Plugin</description>
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <url>https://www.zapmek.com</url>
 
     <build>
         <plugins>
